Added \\d+ (escaped decimal match) to preg_match test to note this problem.

--- a/tests/ExpressionLanguage/test.yml
+++ b/tests/ExpressionLanguage/test.yml
@@ -1,4 +1,4 @@
 preg_match:
   Yaml_RSS:
-    expression: 'preg_match("/rss.php\\?key=(?<key>.*)/i", "rss.php?key=123456")["key"]'
+    expression: 'preg_match("/rss.php\\?key=(?<key>\\d+)/i", "rss.php?key=123456")["key"]'
     expected: '123456'
