Releasing symfony 3.4 locks

--- a/composer.json
+++ b/composer.json
@@ -26,13 +26,13 @@
         "facebook/webdriver": "^1.4",
         "symfony/options-resolver": "*",
         "symfony/expression-language": "*",
+        "symfony/dom-crawler": "*",
+        "symfony/css-selector": "*",
         "psr/log": "~1.0",
         "doctrine/cache": "~1.4",
         "monolog/monolog": "^1.22",
         "league/tactician": "^1.0",
-        "symfony/dom-crawler": "^3.4",
         "kriswallsmith/buzz": "^0.15",
-        "symfony/css-selector": "^3.4",
         "guzzlehttp/psr7": "^1.4"
     },
     "require-dev": {
